update approval documentation
